[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automatic_spoon_client_sync"
version = "0.1.0"
description = "This library contains the API to make synchronous HTTP calls Automatic Spoon"
readme = "README.md"
authors = [{name = "Manos Ragiadako"}]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/rm4n0s/automatic_spoon_client_sync"
